# simple_dcgan

./: .gitignore  Cargo.toml  config.json
src/: lib.rs  main.rs  model.py
