[package]
name = "simple_dcgan"
version = "0.1.0"
authors = ["eteeeeeerminal <momentneet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="*"
tch="0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json="*"